codigo
>>> print("Brasil", "ganhou", 5, "titulos mundiais")
Brasil ganhou 5 titulos mundiais
>>> pais = "italia"
>>> type(pais)
<class 'str'>
>>> quantidade = 4
>>> type(quantidade)
<class 'int'>
>>> print("pais, "ganhou", quantidade, "titulos mundiais")
  File "<python-input-13>", line 1
    print("pais, "ganhou", quantidade, "titulos mundiais")
                                                        ^
SyntaxError: unterminated string literal (detected at line 1)
>>> print(pais, "ganhou", quantidade, "titulos mundiais")
italia ganhou 4 titulos mundiais
>>> pais = "alemanha"
>>> type(pais)
<class 'str'>
>>>
